Fixed top icons size on mobile view

--- a/src/styles/blocks/_menu-top-and-icons.scss
+++ b/src/styles/blocks/_menu-top-and-icons.scss
@@ -2,6 +2,7 @@
 
 .menu__top {
   @extend %flex-space;
+
 }
 
 .top__buttons {
@@ -26,8 +27,8 @@
 .icon {
   @extend %background;
   display: block;
-  width: 18px;
-  height: 18px;
+  width: 24px;
+  height: 24px;
 
   @include tablet {
     width: 24px;
